// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentSymbol File with continuation workflow 1`] = `
[
  {
    "detail": "2.1",
    "kind": 0,
    "name": "Version",
    "range": {
      "end": {
        "character": 12,
        "line": 0,
      },
      "start": {
        "character": 0,
        "line": 0,
      },
    },
    "selectionRange": {
      "end": {
        "character": 12,
        "line": 0,
      },
      "start": {
        "character": 0,
        "line": 0,
      },
    },
  },
  {
    "detail": "true",
    "kind": 17,
    "name": "Setup",
    "range": {
      "end": {
        "character": 11,
        "line": 2,
      },
      "start": {
        "character": 0,
        "line": 2,
      },
    },
    "selectionRange": {
      "end": {
        "character": 11,
        "line": 2,
      },
      "start": {
        "character": 0,
        "line": 2,
      },
    },
  },
  {
    "children": [
      {
        "detail": "0.1.2",
        "kind": 12,
        "name": "continuation",
        "range": {
          "end": {
            "character": 43,
            "line": 5,
          },
          "start": {
            "character": 2,
            "line": 5,
          },
        },
        "selectionRange": {
          "end": {
            "character": 43,
            "line": 5,
          },
          "start": {
            "character": 2,
            "line": 5,
          },
        },
      },
    ],
    "kind": 18,
    "name": "Orbs",
    "range": {
      "end": {
        "character": 43,
        "line": 5,
      },
      "start": {
        "character": 2,
        "line": 5,
      },
    },
    "selectionRange": {
      "end": {
        "character": 43,
        "line": 5,
      },
      "start": {
        "character": 2,
        "line": 5,
      },
    },
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "kind": 1,
                "name": "checkout",
                "range": {
                  "end": {
                    "character": 16,
                    "line": 11,
                  },
                  "start": {
                    "character": 8,
                    "line": 11,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 16,
                    "line": 11,
                  },
                  "start": {
                    "character": 8,
                    "line": 11,
                  },
                },
              },
              {
                "kind": 1,
                "name": "Generate config",
                "range": {
                  "end": {
                    "character": 11,
                    "line": 12,
                  },
                  "start": {
                    "character": 8,
                    "line": 12,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 11,
                    "line": 12,
                  },
                  "start": {
                    "character": 8,
                    "line": 12,
                  },
                },
              },
              {
                "kind": 1,
                "name": "continuation/continue",
                "range": {
                  "end": {
                    "character": 29,
                    "line": 16,
                  },
                  "start": {
                    "character": 8,
                    "line": 16,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 29,
                    "line": 16,
                  },
                  "start": {
                    "character": 8,
                    "line": 16,
                  },
                },
              },
            ],
            "detail": "3 total",
            "kind": 18,
            "name": "Steps",
            "range": {
              "end": {
                "character": 50,
                "line": 17,
              },
              "start": {
                "character": 4,
                "line": 10,
              },
            },
            "selectionRange": {
              "end": {
                "character": 50,
                "line": 17,
              },
              "start": {
                "character": 4,
                "line": 10,
              },
            },
          },
          {
            "kind": 6,
            "name": "Executor: continuation/default",
            "range": {
              "end": {
                "character": 34,
                "line": 9,
              },
              "start": {
                "character": 4,
                "line": 9,
              },
            },
            "selectionRange": {
              "end": {
                "character": 34,
                "line": 9,
              },
              "start": {
                "character": 4,
                "line": 9,
              },
            },
          },
        ],
        "kind": 1,
        "name": "setup",
        "range": {
          "end": {
            "character": 50,
            "line": 17,
          },
          "start": {
            "character": 2,
            "line": 8,
          },
        },
        "selectionRange": {
          "end": {
            "character": 50,
            "line": 17,
          },
          "start": {
            "character": 2,
            "line": 8,
          },
        },
      },
    ],
    "kind": 18,
    "name": "Jobs",
    "range": {
      "end": {
        "character": 50,
        "line": 17,
      },
      "start": {
        "character": 2,
        "line": 8,
      },
    },
    "selectionRange": {
      "end": {
        "character": 50,
        "line": 17,
      },
      "start": {
        "character": 2,
        "line": 8,
      },
    },
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "kind": 0,
                "name": "setup",
                "range": {
                  "end": {
                    "character": 13,
                    "line": 22,
                  },
                  "start": {
                    "character": 6,
                    "line": 22,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 13,
                    "line": 22,
                  },
                  "start": {
                    "character": 6,
                    "line": 22,
                  },
                },
              },
            ],
            "kind": 18,
            "name": "Jobs",
            "range": {
              "end": {
                "character": 0,
                "line": 23,
              },
              "start": {
                "character": 4,
                "line": 21,
              },
            },
            "selectionRange": {
              "end": {
                "character": 0,
                "line": 23,
              },
              "start": {
                "character": 4,
                "line": 21,
              },
            },
          },
        ],
        "kind": 23,
        "name": "setup",
        "range": {
          "end": {
            "character": 0,
            "line": 23,
          },
          "start": {
            "character": 2,
            "line": 20,
          },
        },
        "selectionRange": {
          "end": {
            "character": 0,
            "line": 23,
          },
          "start": {
            "character": 2,
            "line": 20,
          },
        },
      },
    ],
    "kind": 18,
    "name": "Workflows",
    "range": {
      "end": {
        "character": 0,
        "line": 23,
      },
      "start": {
        "character": 2,
        "line": 20,
      },
    },
    "selectionRange": {
      "end": {
        "character": 0,
        "line": 23,
      },
      "start": {
        "character": 2,
        "line": 20,
      },
    },
  },
]
`;

exports[`DocumentSymbol Standard file 1`] = `
[
  {
    "detail": "2.1",
    "kind": 0,
    "name": "Version",
    "range": {
      "end": {
        "character": 12,
        "line": 0,
      },
      "start": {
        "character": 0,
        "line": 0,
      },
    },
    "selectionRange": {
      "end": {
        "character": 12,
        "line": 0,
      },
      "start": {
        "character": 0,
        "line": 0,
      },
    },
  },
  {
    "children": [
      {
        "detail": "2",
        "kind": 12,
        "name": "macos",
        "range": {
          "end": {
            "character": 25,
            "line": 3,
          },
          "start": {
            "character": 2,
            "line": 3,
          },
        },
        "selectionRange": {
          "end": {
            "character": 25,
            "line": 3,
          },
          "start": {
            "character": 2,
            "line": 3,
          },
        },
      },
    ],
    "kind": 18,
    "name": "Orbs",
    "range": {
      "end": {
        "character": 25,
        "line": 3,
      },
      "start": {
        "character": 2,
        "line": 3,
      },
    },
    "selectionRange": {
      "end": {
        "character": 25,
        "line": 3,
      },
      "start": {
        "character": 2,
        "line": 3,
      },
    },
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "kind": 1,
                "name": "checkout",
                "range": {
                  "end": {
                    "character": 18,
                    "line": 13,
                  },
                  "start": {
                    "character": 10,
                    "line": 13,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 18,
                    "line": 13,
                  },
                  "start": {
                    "character": 10,
                    "line": 13,
                  },
                },
              },
              {
                "kind": 1,
                "name": "run",
                "range": {
                  "end": {
                    "character": 13,
                    "line": 14,
                  },
                  "start": {
                    "character": 10,
                    "line": 14,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 13,
                    "line": 14,
                  },
                  "start": {
                    "character": 10,
                    "line": 14,
                  },
                },
              },
              {
                "kind": 1,
                "name": "macos/switch-ruby",
                "range": {
                  "end": {
                    "character": 27,
                    "line": 15,
                  },
                  "start": {
                    "character": 10,
                    "line": 15,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 27,
                    "line": 15,
                  },
                  "start": {
                    "character": 10,
                    "line": 15,
                  },
                },
              },
            ],
            "detail": "3 total",
            "kind": 18,
            "name": "Steps",
            "range": {
              "end": {
                "character": 24,
                "line": 16,
              },
              "start": {
                "character": 4,
                "line": 12,
              },
            },
            "selectionRange": {
              "end": {
                "character": 24,
                "line": 16,
              },
              "start": {
                "character": 4,
                "line": 12,
              },
            },
          },
          {
            "children": [
              {
                "kind": 8,
                "name": "cimg/node:17.2.0",
                "range": {
                  "end": {
                    "character": 31,
                    "line": 8,
                  },
                  "start": {
                    "character": 8,
                    "line": 8,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 31,
                    "line": 8,
                  },
                  "start": {
                    "character": 8,
                    "line": 8,
                  },
                },
              },
            ],
            "kind": 13,
            "name": "Docker",
            "range": {
              "end": {
                "character": 24,
                "line": 16,
              },
              "start": {
                "character": 2,
                "line": 6,
              },
            },
            "selectionRange": {
              "end": {
                "character": 24,
                "line": 16,
              },
              "start": {
                "character": 2,
                "line": 6,
              },
            },
          },
        ],
        "kind": 1,
        "name": "build",
        "range": {
          "end": {
            "character": 24,
            "line": 16,
          },
          "start": {
            "character": 2,
            "line": 6,
          },
        },
        "selectionRange": {
          "end": {
            "character": 24,
            "line": 16,
          },
          "start": {
            "character": 2,
            "line": 6,
          },
        },
      },
    ],
    "kind": 18,
    "name": "Jobs",
    "range": {
      "end": {
        "character": 24,
        "line": 16,
      },
      "start": {
        "character": 2,
        "line": 6,
      },
    },
    "selectionRange": {
      "end": {
        "character": 24,
        "line": 16,
      },
      "start": {
        "character": 2,
        "line": 6,
      },
    },
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "kind": 0,
                "name": "build",
                "range": {
                  "end": {
                    "character": 13,
                    "line": 21,
                  },
                  "start": {
                    "character": 6,
                    "line": 21,
                  },
                },
                "selectionRange": {
                  "end": {
                    "character": 13,
                    "line": 21,
                  },
                  "start": {
                    "character": 6,
                    "line": 21,
                  },
                },
              },
            ],
            "kind": 18,
            "name": "Jobs",
            "range": {
              "end": {
                "character": 0,
                "line": 24,
              },
              "start": {
                "character": 4,
                "line": 20,
              },
            },
            "selectionRange": {
              "end": {
                "character": 0,
                "line": 24,
              },
              "start": {
                "character": 4,
                "line": 20,
              },
            },
          },
        ],
        "kind": 23,
        "name": "test-build",
        "range": {
          "end": {
            "character": 0,
            "line": 24,
          },
          "start": {
            "character": 2,
            "line": 19,
          },
        },
        "selectionRange": {
          "end": {
            "character": 0,
            "line": 24,
          },
          "start": {
            "character": 2,
            "line": 19,
          },
        },
      },
    ],
    "kind": 18,
    "name": "Workflows",
    "range": {
      "end": {
        "character": 0,
        "line": 24,
      },
      "start": {
        "character": 2,
        "line": 19,
      },
    },
    "selectionRange": {
      "end": {
        "character": 0,
        "line": 24,
      },
      "start": {
        "character": 2,
        "line": 19,
      },
    },
  },
]
`;
